--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,12 @@
+title: "Testing GitHub Pages: using DartPad"
+js: 
+  - defer: true
+    url: https://dartpad.dev/experimental/inject_embed.dart.js
 lsi: false
 safe: true
 source: /
 incremental: false
 highlighter: rouge
-gist:
-  noscript: false
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
